fix images on firefox

--- a/css/corona.css
+++ b/css/corona.css
@@ -65,6 +65,7 @@ html {
 
 #corona .corona__left img {
   margin-right: 10px;
+  min-width: 22px;
 }
 
 #corona .corona__left span {
@@ -130,6 +131,7 @@ html {
 
 #corona .corona__item img {
   margin-right: 20px;
+  min-width: 90px;
 }
 
 #corona .corona__item span {
@@ -153,6 +155,7 @@ html {
 
 #corona .corona__todo img {
   margin-right: 10px;
+  min-width: 22px;
 }
 
 @media (max-width: 1199.98px) {
