--- a/style.scss
+++ b/style.scss
@@ -69,6 +69,7 @@ html {
 
             & img {
                 margin-right: 10px;
+                min-width: 22px;
             }
 
             & span {
@@ -138,6 +139,7 @@ html {
 
             & img {
                 margin-right: 20px;
+                min-width: 90px;
             }
 
             & span {
@@ -162,6 +164,7 @@ html {
 
             & img {
                 margin-right: 10px;
+                min-width: 22px;
             }
         }
     }
